--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -23,30 +23,35 @@
         <DataTemplate x:Key="StandardCommentTemplate">
             <Grid Background="White">
                 <Border BorderBrush="{StaticResource ReplyHighlightBrush}" BorderThickness="4,0,0,0" Margin="{Binding IndentLevel,Converter={StaticResource IndentThicknessConverter}}">
-                    <Grid Background="White" Margin="15,0,15,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
+                    <Grid Background="White" Margin="15,0,15,10">
 
-                        <RichTextBlock helpers:HtmlToRtfConverter.Html="{Binding Body}" Grid.Row="1" Margin="0" FontSize="14" />
-                        <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
-                            <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
-                            <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
-                            <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
-                            <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
-                            <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
-                                <TextBlock.RenderTransform>
-                                    <RotateTransform Angle="180"/>
-                                </TextBlock.RenderTransform>
-                            </TextBlock>
-                        </StackPanel>
-                        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
 
+                            <RichTextBlock helpers:HtmlToRtfConverter.Html="{Binding Body}" Grid.Row="1" Margin="0" FontSize="14" />
+                            <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
+                                <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
+                                <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
+                                <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
+                                <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
+                                <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
+                                    <TextBlock.RenderTransform>
+                                        <RotateTransform Angle="180"/>
+                                    </TextBlock.RenderTransform>
+                                </TextBlock>
+                            </StackPanel>
+                        </Grid>
+                        <StackPanel VerticalAlignment="Top" Orientation="Horizontal" HorizontalAlignment="Right" Visibility="{Binding IsSelected, Converter={StaticResource VisibilityConverter}}">
+                            <Button Margin="5,10,5,0" Style="{StaticResource ReplyButtonStyle}" />
+                            <Button Margin="5,10,5,0" Style="{StaticResource UpvoteButtonStyle}" />
+                            <Button Margin="5,10,5,0" Style="{StaticResource DownvoteButtonStyle}" />
                         </StackPanel>
                     </Grid>
                 </Border>
@@ -135,12 +140,17 @@
                     </ScrollViewer>
                 </Border>
 
-                <ListView x:Name="Row5Piece" Grid.ColumnSpan="2" Grid.Row="5" ItemsSource="{Binding CurrentPost.Comments}" ItemTemplateSelector="{StaticResource CommentSelector}" SelectionMode="None" IsItemClickEnabled="True">
-                    <ListView.ItemContainerStyle>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                        </Style>
-                    </ListView.ItemContainerStyle>
+                <ListView 
+                    x:Name="Row5Piece" 
+                    Grid.ColumnSpan="2" 
+                    Grid.Row="5" 
+                    SelectedItem="{Binding CurrentComment, Mode=TwoWay}" 
+                    ItemsSource="{Binding CurrentPost.Comments}" 
+                    ItemTemplateSelector="{StaticResource CommentSelector}" 
+                    SelectionMode="Single" 
+                    IsItemClickEnabled="False"  
+                    ItemContainerStyle="{StaticResource RedditListViewItem}"
+                    HorizontalContentAlignment="Stretch">
                 </ListView>
             </Grid>
         </Grid>
